<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:background="@color/white"
                android:layout_height="fill_parent">
    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="45dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/product_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

          <TextView
            android:id="@+id/popularity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="18sp"
            android:text="@string/label_new"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="gone"/>

            <ImageView
              android:id="@+id/product_image"
              android:layout_width="match_parent"
              android:layout_height="335dp"
              android:layout_gravity="center"
              android:layout_marginTop="15dp"
              android:adjustViewBounds="true"
              android:cropToPadding="false"
              android:maxHeight="150dp"
              android:layout_below="@+id/popularity"
              android:maxWidth="150dp"
              android:padding="2dp"
              android:scaleType="fitXY"/>

            <TextView
                android:id="@+id/product_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textIsSelectable="false"
                android:paddingTop="5dp"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <TextView
                android:id="@+id/product_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:gravity="left"
                android:paddingTop="5dp"
                android:singleLine="false"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/add_to_wishlist"
        style="@style/GreenButtonSmallBoldText"
        android:layout_width="187dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:paddingTop="5dp"
        android:text="@string/add_to_wishlist"/>
    <Button
        android:id="@+id/add_to_cart"
        style="@style/GreenButtonSmallBoldText"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/add_to_wishlist"
        android:layout_toRightOf="@+id/add_to_wishlist"
        android:onClick="addToCart"
        android:paddingTop="5dp"
        android:layout_marginLeft="3dp"
        android:text="@string/buy"/>
</RelativeLayout>
