<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Gadget Stop</string>
  <string name="electronics">ELECTRONICS</string>
  <string name="accessories">ACCESSORIES</string>
  <string name="cart">Cart</string>
  <string name="title_activity_product_details">Details</string>
  <string name="add_to_wishlist">Add to Wishlist</string>
  <string name="buy">Buy</string>
  <string name="ok">Ok</string>
  <string name="loading">Loading...</string>
  <string name="addedToCart">Item added to cart</string>
  <string name="indian_currency">Rs. </string>
  <string name="percentage_sign">%</string>
  <string name="label_new">New</string>
  <string name="popular">Popular</string>
  <string name="empty_string">""</string>
  <string name="already_added_to_cart">This item is already added to the cart</string>
  <string name="technical_difficulty">There is some technical difficulties</string>
</resources>
